--- a/index.html
+++ b/index.html
@@ -35,13 +35,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">SE Trade Calculator</a>
+                    <a class="navbar-brand" href="index.html">SE Trade Calculator</a>
                 </div>
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li class="active"><a href="index.html">Home</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
