--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<div class="container">
 
 			<div class="starter-template">
-			   <form class="form-inline">
+			   <form class="form-inline" onsubmit="return false;">
 					<div class="form-group">
 						<label for="sellAmount">I am trading</label>
 						<input id="sellAmount" type="text" placeholder="0" data-bind="value: sellAmount" />
