--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			   <form class="form-inline" onsubmit="return false;">
 					<div class="form-group">
 						<label for="sellAmount">I am trading</label>
-						<input id="sellAmount" type="number" placeholder="0" data-bind="value: sellAmount, valueUpdate: 'afterkeydown'" />
+						<input id="sellAmount" type="number" min="0" placeholder="0" data-bind="value: sellAmount, valueUpdate: 'afterkeydown'" />
 					</div>
 					<div class="form-group">
 						<label for="selling">units of</label>
