--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					</div>
 				</form>
 
-				<p class="lead">You should be getting <strong data-bind="text: buyAmount"></strong> units of <strong data-bind="text: sellAmount">.</p>
+				<p class="lead">You should be getting <strong data-bind="text: buyAmount"></strong> units of <!-- ko text: buying().name --><!-- /ko -->.</p>
 				<p><small>Note: Refining costs have not been taken into account. This is a guideline not a definitive price, only taking into account the rarity of the ores and the amount produced once processed.</small></p>
 			</div>
 
